--- a/my_web_wanted/web/WEB-INF/web.xml
+++ b/my_web_wanted/web/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   <welcome-file-list>
     <welcome-file>/WEB-INF/view/index.jsp</welcome-file>
   </welcome-file-list>
-	<!-- <servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.js</url-pattern>
 		<url-pattern>*.css</url-pattern>
@@ -17,7 +17,6 @@
 		<url-pattern>*.svg</url-pattern>
 		<url-pattern>*.webp</url-pattern>
 	</servlet-mapping>
-	 -->
 	<filter>
 		<filter-name>EncodingFilter</filter-name>
 		<filter-class>common.filter.EncodingFilter</filter-class>
