--- a/my_web_wanted/web/WEB-INF/web.xml
+++ b/my_web_wanted/web/WEB-INF/web.xml
@@ -17,12 +17,12 @@
 		<url-pattern>*.svg</url-pattern>
 		<url-pattern>*.webp</url-pattern>
 	</servlet-mapping>
- 	<filter>
+<!--  	<filter>
 		<filter-name>EncodingFilter</filter-name>
 		<filter-class>common.filter.EncodingFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>EncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 </web-app>
