--- a/my_web_wanted/web/WEB-INF/web.xml
+++ b/my_web_wanted/web/WEB-INF/web.xml
@@ -4,6 +4,12 @@
   <welcome-file-list>
     <welcome-file>/WEB-INF/index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- <servlet>
+  	<servlet-name>aaa</servlet-name>
+  	<servlet-class>kh.s14.wanted.member.controller.LoginController</servlet-class>
+  </servlet> -->
+  
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.js</url-pattern>
